[package]

name = "lalry"
version = "0.1.0"
authors = ["Geoffry Song <goffrie@gmail.com>", "Jörg Singer <singer.joerg@gmx.de>"]

description = "a library for creating LALR(1) parsers from context-free grammars"
repository = "https://github.com/jsinger67/lalry"
documentation = "https://docs.rs/lalry"
license = "MIT OR Apache-2.0"
keywords = ["lalr", "parsing"]

[lib]

name = "lalry"
